<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="410dp" >

		    <RadioGroup
		        android:id="@+id/radioGroup1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/date_ET"
		        android:layout_centerHorizontal="true" >

		        <RadioButton
		            android:id="@+id/radio_offer"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="5dp"
		            android:checked="true"
		            android:text="@string/offer" />

		        <RadioButton
		            android:id="@+id/radio_request"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/request" />
		    </RadioGroup>

		    <TextView
		        android:id="@+id/cur_location_section_header"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="5dp"
		        android:text="@string/location_upper"
		        android:textColor="#aaaaaa"
		        android:textStyle="bold" />

		    <View
		        android:id="@+id/view1"
		        android:layout_width="fill_parent"
		        android:layout_height="1dip"
		        android:layout_alignBottom="@+id/cur_location_section_header"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:background="#cccccc" />

		    <EditText
		        android:id="@+id/cur_location_editText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/view1"
		        android:layout_marginRight="20dp"
		        android:ems="10"
		        android:hint="@string/location"
		        android:inputType="textPostalAddress" >

		        <requestFocus />
		    </EditText>

		    <TextView
		        android:id="@+id/dest_section_header"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/cur_location_editText"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="20dp"
		        android:text="@string/destination_upper"
		        android:textColor="#aaaaaa"
		        android:textStyle="bold" />

		    <View
		        android:id="@+id/view2"
		        android:layout_width="fill_parent"
		        android:layout_height="1dip"
		        android:layout_alignBottom="@+id/dest_section_header"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:background="#cccccc" />

		    <EditText
		        android:id="@+id/dest_editText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/view2"
		        android:layout_marginRight="20dp"
		        android:ems="10"
		        android:hint="@string/destination"
		        android:inputType="textPostalAddress" />

		    <TextView
		        android:id="@+id/date_time_range_section_header"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/dest_editText"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="20dp"
		        android:text="@string/date_time_departure_upper"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="#aaaaaa"
		        android:textStyle="bold" />

		    <View
		        android:id="@+id/view3"
		        android:layout_width="fill_parent"
		        android:layout_height="1dip"
		        android:layout_alignBottom="@+id/date_time_range_section_header"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:background="#cccccc" />

		    <EditText
		        android:id="@+id/date_ET"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/view3"
		        android:layout_marginRight="20dp"
		        android:ems="10"
		        android:hint="@string/date"
		        android:inputType="date" />

		    <View
		        android:id="@+id/View01"
		        android:layout_width="fill_parent"
		        android:layout_height="1dip"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:background="#cccccc" />

		    <RadioGroup
		        android:id="@+id/radioGroup2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/radioGroup1"
		        android:layout_alignParentBottom="true"
		        android:orientation="horizontal" >

		        <RadioButton
		            android:id="@+id/radio_departure"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/by_departure" />
		        
		        <RadioButton
		        android:id="@+id/radio_rating"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/by_rating" />

		    </RadioGroup>

		    <TextView
		        android:id="@+id/orderBy_TV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentLeft="true"
		        android:text="@string/order_by_tv" />

		</RelativeLayout>

	</ScrollView>

	<Button
	        android:id="@+id/button_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:background="@android:color/holo_orange_dark"
	        android:onClick="searchClick"
	        android:text="@string/search"
	        android:textColor="#ffffff" />
	
</RelativeLayout>