<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:orientation="horizontal" >

        <QuickContactBadge
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@android:drawable/gallery_thumb" />

        <TextView
            android:id="@+id/user_show_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:shadowColor="#88000000"
            android:shadowDx="0"
            android:shadowDy="-1"
            android:shadowRadius="0.1"
            android:text="@string/profile_user_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#555555"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#777777"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#999999"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa"/>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:text="@string/email_upper"
                android:textColor="#aaaaaa"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/user_show_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/profile_user_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666666" />

            </LinearLayout>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/location_upper"
                android:textColor="#aaaaaa"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/user_show_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/profile_user_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666666" />

            </LinearLayout>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/phone_upper"
                android:textColor="#aaaaaa"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/user_show_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/profile_user_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666666" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>